fix logo overflow

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -14,6 +14,7 @@ body {
     h1 {
         line-height: 100%;
         height: 78px;
+        overflow: hidden;
         float: left;
         a {
             display: inline-block;
